# olca2tidas

./: README.md  __init__.py  pyproject.toml
.github/workflows/: publish.yml
src/olca2tidas/: converter.py
