
[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "olca2tidas"
version = "0.1.0"
description = "Convert openLCA JSON-LD (e.g., ecoinvent exports) into TIDAS/eILCD-style JSON ready for TianGong LCA."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Qilin Cao"}]
keywords = ["LCA", "openLCA", "TIDAS", "ILCD", "TianGong", "converter"]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Environment :: Console",
  "Topic :: Scientific/Engineering",
  "Topic :: Utilities",
]

[project.urls]
Homepage = "https://github.com/Kirin-Ciao/olca2tidas"
Repository = "https://github.com/Kirin-Ciao/olca2tidas"

[project.scripts]
olca2tidas = "olca2tidas.cli:run"
